# camlidl

./: .gitignore  META  META.in  Makefile  Makefile.in  autogen.sh  common.mk  configure.ac  opam  opam.in
compiler/: .depend  .gitignore  Makefile  config.ml.in  cvttyp.ml  main.ml  version.ml  version.ml.in  version.mli
config/: Makefile.unix  Makefile.win32
lib/: Makefile
runtime/: Makefile
